styles for inactive task

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -9,6 +9,7 @@
 
 	/* Font sizes */
 	--font-size-title: 115px;
+	--font-size-task: 18px;
 
 	/* Colors */
 	--app-bg: #fafafa;
@@ -17,4 +18,6 @@
 	--checkbox-active-border: #D4DEDD;
 	--checkbox-checkmark-color: #8ABAAE;
 	--tableitem-border-color: #EDEDED;
+	--task-active-color: #555;
+	--task-done-color: #D5D5D5;
 }
