--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,11 +3,11 @@
 @import url("./reset.scss");
 
 body {
-	background-color: var(--app-bg);
+	background-color: var(--page-bg);
 }
 
 .app {
-	width: var(--app-width);
+	max-width: var(--app-width);
 	margin: 0 auto;
 	padding: 16px;
 	font-family: Helvetica, arial, sans-serif;
