--- a/src/entities/TaskItem/ui/taskItem.module.scss
+++ b/src/entities/TaskItem/ui/taskItem.module.scss
@@ -2,15 +2,13 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	border: 1px solid var(--tableitem-border-color);
+	border-bottom: 1px solid var(--tableitem-border-color);
 	min-height: 40px;
 	height: 100%;
 	padding: 5px 10px;
 	gap: 10px;
+	background: var(--app-bg);
 }
-
-
-
 
 .text {
 	font-size: var(--font-size-task);
